app/styles/components/_modals.scss
/* ... */
.modal {
    text-align: left;
    height: 100%;

    .modal__dialog {
        height: 100%;
    }

    .modal__dialog__content {
        height: 100%;
    }

    .modal__header {
        font-family: 'PT Sans', sans-serif;
        font-size: 16px;
        font-weight: 700;
        color: $black-light;
        border-bottom: 1px solid #e2e2e2;
        border-top-left-radius: 5px;
        border-top-right-radius: 5px;
        line-height: 60px;
        width: 100%;
        height: 60px;

        .modal--close,
        h1 {
            display: inline-block;
            border-top-right-radius: 5px;
        }

        h1 {
            padding-left: 30px;
            border-right: 1px solid #e2e2e2;
            width: calc(100% - 60px);
        }

        .modal--close {
            border: 1px solid #e2e2e2;
            border-bottom: 0;
            float: right;
            width: 60px;

            .btn__modal--close {
                width: 100%;
                height: 60px;
            }

            .svg-icon__modal--close {
                width: 13px;
                height: 13px;
                transition: fill 250ms;
                fill: $grey-light;
            }

            &:hover {
                .svg-icon__modal--close {
                    transition: fill 250ms;
                    fill: #939499;
                }
            }
        }
    }

    .modal__body {
        padding: 30px;

        .modal__parraph {
            margin-bottom: 17px;

            & + .modal__input {
                margin-top: 27px;
            }
        }

        .modal__input {
            margin-top: 27px;
        }

        .modal__limit {
            padding-bottom: 17px;
        }
    }

    .modal--buttons {
        button {
            margin: 0 10px;
        }
        padding-bottom: 30px;
        display: flex;
        justify-content: center;
    }
}

.modal--share-no-users {
    .modal__body {
        padding: 25px 0 !important;

        p {
            padding: 5px 30px;
        }
    }

    .import-modal__error-files {
        background-color: #e2e2e2;
        padding: 20px 48px;

        .files {
            list-style: initial;
        }
    }

    .share-modal__emails-no-user {
        background-color: #e2e2e2;
        padding: 20px 30px;

        .files {
            list-style: initial;
        }

        .email:last-child {
            .colon {
                display: none;
            }
        }
    }
}

.modal-share-social--container {
    .social-networks {
        padding: 15px 0;
    }
}

.modal-share--short-url-input {
    margin-top: 10px;
    width: 100%;

    input {
        padding-right: 10px;
        border-right: 1px solid $grey-border;
        text-align: center;
        height: 28px;
        min-width: calc(100% - 60px);
    }

    &:after {
        content: none;
    }

    .copy-selected-text {
        position: relative;
        margin-left: 5px;
        text-align: center;

        &:hover {
            cursor: pointer;
            text-decoration: underline;
        }
    }
}

.modal--delete-group {
    p:not(:first-child):not(:last-child) {
        margin: 15px 0;
    }
}

.modal__footer--text {
    background-color: $grey-lighter;
    padding: 17px;
    text-align: center;

    .link--modal {
        color: $black-light;
    }
}

.modal--web2board-errors {
    .modal__body {
        padding: 50px;
        width: 546px;
    }

    .modal--web2board-errors--title {
        margin: 20px 0;
        text-align: center;
    }

    .modal--web2board-errors--content {
        margin: 30px;
    }

    .modal--web2board-errors--text {
        margin: 20px 0;
    }

    .modal--web2board-errors--list {
        margin: 5px 0;

        .svg-icon {
            width: 15px;
            fill: $green;
        }
    }

    .modal--web2board-errors--item {
        margin: 10px 0;
    }

    .modal--web2board-errors--phone {
        font-size: 1.5em;
        font-weight: bold;
        text-align: center;
    }

    .link--default {
        color: #000000;
    }
}

.modal_input_secondaryText {
    font-size: 25px;
    margin-top: 15px;

    &::before {
        content: 'ID ';
    }
}
/* ... */

